--- a/index.css
+++ b/index.css
@@ -182,15 +182,16 @@ span {
 
 .modal {
     display: none;
+    border: 1px solid red;
     z-index: 1;
     background-color: #ffffff;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
-    width: 524px;
+    transform: translate(-50%, -50%);
+    max-width: 500px;
+    min-width: 450px;
     height: 542px;
-    margin-left: -262px;
-    margin-top: -271px;
     box-shadow: 0px 0px 400px #888888; 
 }
 
